# Mewon

./: .gitignore  README.md  pyproject.toml
aws/terraform/: main.tf  outputs.tf  variables.tf
configs/: aws.yaml  full.yaml  nanogpt.yaml  quick.yaml
docs/: guide.md  nanogpt.md
mewon/: cli.py  diag.py  quant.py  tracking.py  utils.py
mewon/analysis/: collect.py  dashboard.py  report.py
mewon/experiments/: compression.py  kernels.py  lm.py  mmd.py  probe.py  runner.py  synth.py  theory.py  transport.py  vision.py
mewon/integrations/: __init__.py  nanogpt.py
mewon/models/: gpt.py  hf.py  mlp.py  vision.py
mewon/optim/: __init__.py  bask.py  core.py  omega.py  ops.py
scripts/: awscampaign.sh  fullsuite.sh  multiseed.sh  quickvalidate.sh
tests/: testbask.py  testcompress.py  testmewon.py  testomega.py  testops.py  testoptim.py  testrect.py
